Avoiding NPE:s and some refactoring